# venom-training

./: .gitignore  LICENSE  README.md  venom_sparse_operations.py
amdahl4ML/: README.md  bert-mini.py  controled_times_bert_mini.py  custom_graph_drawer.py  kernelOperations.py  operationsAndGroups.xml  speedups.json
amdahl4ML/bert-mini_profiling/: bert-mini_layer.onnx  profiler_stacks_dense_cpu.txt  profiler_stacks_dense_cuda.txt  trace_dense_layer.json
amdahl4ML/wait_kernel/: api.cu  controlled_wait_kernel.cu  controlled_wait_kernel.h  controlled_wait_library.cu  install.sh  setup.py
deliverable/: Benchmarking_sddmm.ipynb  bench_end2end.py  bench_end2end_dense.py  bench_end2end_diego.py  epoch_training_dense.py  epoch_training_venom.py  run_bench.sh  sddmm_benchmark.py  test_e2e_torch.ipynb  venom_tensor.py
deliverable/result/: bench.csv  bench2.csv
end2end/: setup.py
examples/: Reference_b_matrix_64x64.txt  sddmm_benchmark.py  test_sddmm.ipynb  tests_spmm.ipynb
examples/bert_inference/: check_results_encoder_0 copy.ipynb
examples/spatha_integration_testing/: __init__.py  spatha_integration_test.py  venom_sparse_operations.py
performance_analysis/: README.md  extract_times_from_traces.py  graphics.py  recipe_example.yaml  setup.sh  sparse_distributed.sh  sparsified_model_distributed.py
sddmm_module/: install.sh  install_v64.sh  setup.py  setup_v64.py
sddmm_module/module_files/block_sparse/: CMakeLists.txt  Makefile  cuda_array.h  cuda_error.h
sddmm_module/module_files/block_sparse/api/: CMakeLists.txt  spatha.cu
sddmm_module/module_files/block_sparse/common/: library_util.h  memcpy.h  mma.h  mma2.h  swizzle.h  vector.h
sddmm_module/module_files/block_sparse/example/: Makefile
sddmm_module/module_files/block_sparse/sddmm/: blockwise_kernel2.h  blockwise_library.cu  sddmm_library_decl.h
sddmm_module/module_files/block_sparse/spmm/: blockwise_library.cu
sddmm_module/module_files/block_sparse/util/: random_mask.h
sddmm_module/spatha_sddmm.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
sparse_kernels/sddmm_module/: README.md
sparse_kernels/sddmm_module/module_files/block_sparse/example/: CMakeLists.txt  sddmm.blockwise.cu
sparse_kernels/sddmm_module/spatha_sddmm.egg-info/: PKG-INFO
sparse_kernels/spmm_module/: README.md  bert_pytorch.py
sparseml/integrations/huggingface-transformers/: .gitignore
sparseml/scripts/: .gitignore  GMP_1_epoch.sh  GMP_3_epoch_full_dataset.sh  GMP_long_test.sh  GMP_short_test.sh  GMP_stress.sh
spmm_module/: README.md  setup_v64.py
test_and_benchmarks/: README.md  Reference_b_matrix_32x64.txt  bench_end2end.py  environment_working.yml  epoch_training_dense.py  epoch_training_venom.py  epoch_training_venom_no_transpose.py  plot_results.py  test_e2e_torch.ipynb  test_e2e_torch_copy.ipynb  tests_spmm.ipynb  venom_sparse_operations.py  venom_tensor_diego.py
test_and_benchmarks/spatha_integration_testing/: grouped_nmv_tensor.py
(+40 files in other folders)
